<resources>
    <string name="app_name">ValidationTute</string>
    <string name="tvTitle">Register Student</string>
    <string name="edtStudentId">Enter Student ID</string>
    <string name="tvYear">Select Academic Year</string>
    <string name="tvSemester">Select the Semester</string>
    <string name="cbAgree">I agree to terms and conditions</string>
    <string name="btnConfirm">Sumbit</string>
    <string name="btnCancel">Cancel</string>


    <string-array name="years">
        <item></item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="semesters">
        <item>Semester 1</item>
        <item>Semester 2</item>
    </string-array>
</resources>