<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="submit"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/tvTitle"
        android:textSize="34sp" />

    <EditText
        android:id="@+id/edtStudentId"
        android:layout_width="295dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:ems="10"
        android:hint="@string/edtStudentId"
        android:inputType="textPersonName"
        android:text="Name"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/tvYear"
        android:textSize="24sp" />

    <Spinner
        android:id="@+id/spnYear"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:layout_marginTop="40dp"
        android:entries="@array/years"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvSemester"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/tvSemester"
        android:textSize="24sp" />

    <Spinner
        android:id="@+id/spnSemester"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:layout_marginTop="44dp"
        android:entries="@array/semesters"
        tools:ignore="SpeakableTextPresentCheck" />

    <CheckBox
        android:id="@+id/cbAgree"
        android:layout_width="301dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:height="50dp"
        android:text="@string/cbAgree"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="29dp"
        android:onClick="submit"
        android:text="@string/btnConfirm" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginBottom="36dp"
        android:text="@string/btnCancel" />
</LinearLayout>